--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Creative Portfolio</title>
+    <title>Malaz Elbadri</title>
     <link rel="stylesheet" href="styles.css">
      
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
@@ -36,26 +36,26 @@
     <section id="projects" class="section">
         <h2 class="section-title">My Projects</h2>
         <div class="projects-grid">
+            <!-- Project 1 -->
+            <a href="project1.html" class="project-card">
+                <div class="project-img">
+                    <img src="images/StarterP5.JsGame.jpg" alt="Project 2">
+                </div>
+            </a>
             <!-- Project 2 -->
             <a href="project2.html" class="project-card">
                 <div class="project-img">
-                    <img src="images/StarterP5.JsGame.jpg" alt="Project 2">
+                    <img src="images/darklight.jpeg" alt="Project 3">
                 </div>
             </a>
             <!-- Project 3 -->
             <a href="project3.html" class="project-card">
                 <div class="project-img">
-                    <img src="images/darklight.jpeg" alt="Project 3">
-                </div>
-            </a>
-            <!-- Project 4 -->
-            <a href="project4.html" class="project-card">
-                <div class="project-img">
                     <img src="images/game.jpg" alt="Project 4">
                 </div>
             </a> 
-              <!-- Project 5 -->
-              <a href="project5.html" class="project-card">
+              <!-- Project 4 -->
+              <a href="project4.html" class="project-card">
                 <div class="project-img">
                     <img src="images/tarotfront.jpg" alt="Project 3">
                 </div>
